# LossTriangle

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
SDP/: README.md  pipeline_config.yml
SDP/bronze/: 01_bronze_batch_embedded.sql  02_bronze_streaming_uc.sql
SDP/data_prep/: 00_setup_volumes_and_data.py
SDP/gold/: 01_gold_development_factors.sql  02_gold_chain_ladder.py  03_gold_views.sql  04_gold_actuarial_analytics.sql  chain_ladder_job.py
SDP/silver/: 01_silver_enriched_claims.sql  02_silver_loss_triangles.sql  03_silver_nlp_risk.sql
app/: README.md  app.py  app.yaml  requirements.txt
app/.streamlit/: config.toml
config/: genie_config.yaml
config/environments/: dev.yaml  prod.yaml
config/schemas/: claims_schema.json
data/samples/: sample_claims.csv  sample_payments.csv
docs/: business_guide.md  pipeline_documentation.md
docs/architecture/: README.md  data_dictionary.md
genie/: reserve_oracle_instructions.md  reserve_oracle_setup.py
notebooks/00_setup/: 00_environment_setup.py
notebooks/01_bronze/: 01_data_ingestion.py
notebooks/02_silver/: 02_triangle_builder.py  03_risk_detection.py
notebooks/03_gold/: 04_chain_ladder.py
notebooks/04_analytics/: 05_genie_setup.py  06_actuarial_dashboards.py  07_chainladder_dashboards.py
src/: __init__.py
src/actuarial/: __init__.py
src/actuarial/chain_ladder/: __init__.py  diagnostics.py  model.py  reserves.py
src/ai_risk/: __init__.py
src/ai_risk/nlp/: __init__.py  keyword_extractor.py  risk_detector.py
src/data_engineering/: __init__.py
src/data_engineering/bronze/: __init__.py  ingestion.py  schema.py
src/data_engineering/silver/: __init__.py  transformations.py  triangle_builder.py
src/data_engineering/utils/: __init__.py  data_quality.py  helpers.py
src/semantic/: __init__.py
src/semantic/metrics/: __init__.py  definitions.py
workflows/jobs/: placeholder.yml
